[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/UI/OptionsMenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/UI/AnimatedButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/util/RangeControl.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/PanelContainer:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 0.9 ),
"transitions": PoolRealArray( 1e-05, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0, 0 ), Vector2( 1.15, 1.15 ), Vector2( 0.95, 0.95 ) ]
}

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 52.0
margin_top = 11.0
margin_right = 268.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( 68, 56 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_right = 216.0
margin_bottom = 157.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 208.0
margin_bottom = 149.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 100, 0 )
custom_constants/separation = 7

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 13.0
text = "OPTIONS"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_left = 40.0
margin_top = 20.0
margin_right = 160.0
margin_bottom = 45.0
size_flags_horizontal = 4

[node name="WindowedButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
size_flags_horizontal = 8
size_flags_vertical = 4
text = "Windowed"

[node name="MusicVolumeContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_left = 57.0
margin_top = 52.0
margin_right = 143.0
margin_bottom = 77.0
rect_min_size = Vector2( 15, 0 )
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MusicVolumeContainer"]
margin_top = 6.0
margin_bottom = 19.0

[node name="RangeControl" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MusicVolumeContainer" instance=ExtResource( 4 )]
margin_left = 4.0
margin_right = 86.0

[node name="SFXVolumeContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_left = 44.0
margin_top = 84.0
margin_right = 156.0
margin_bottom = 109.0
size_flags_horizontal = 4

[node name="SFX" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SFXVolumeContainer" instance=ExtResource( 3 )]
margin_right = 26.0
rect_min_size = Vector2( 10, 25 )
size_flags_horizontal = 8
size_flags_vertical = 4
text = "SFX"

[node name="RangeControl" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SFXVolumeContainer" instance=ExtResource( 4 )]
margin_left = 30.0
margin_right = 112.0

[node name="BackButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 40.0
margin_top = 116.0
margin_right = 160.0
margin_bottom = 141.0
text = "Back"
